@startuml TODO

skinparam linetype ortho

entity User {
    -id: ObjectId <<generated>>
    --
    *name: String
    *email: String
    +createdAt: Date
    +updatedAt: Date
}

entity Task {
    -id: ObjectId <<generated>>
    --
    ~projectId: ObjectId
    ~linkedTo: ObjectId
    ~assignTo: ObjectId
    ~createdBy: ObjectId
    ~updatedBy: ObjectId
    --
    *title: String
    *isCreatedByAdmin: Boolean
    +status: ETaskStatus
    +description: String
    +createdAt: Date
    +updatedAt: Date
}

entity Project {
    -id: ObjectId <<generated>>
    --
    ~createdBy: ObjectId
    ~updatedBy: ObjectId
    --
    *title: String
    +description: String
    +createdAt: Date
    +updatedAt: Date
}

entity ProjectUser {
    -id: ObjectId <<generated>>
    --
    projectId: ObjectId
    userId: ObjectId
    --
    *role: ERole
}

entity UserCredential {
    -id: ObjectId <<generated>>
    --
    ~userId: ObjectId
    --
    *password: String
}

enum ERole {
    USER
    ADMIN
}

enum ETaskStatus {
    TODO
    DOING
    DONE
}

Task }|--|| User
Task ||--o| Task
Project ||--|{ Task
Project ||--|{ ProjectUser
User ||--|{ ProjectUser
User ||--|| UserCredential
ETaskStatus -- Task
ERole -- ProjectUser

@enduml